Added changes from embest.
- Added RioT and SBC9000 board device tree.
- Added generic ts driver.
- Added vga ch7033 chip driver.
- Added ov2656 camera driver.
- Fix ov5640.
- Fix ads7846.

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -909,4 +909,6 @@ config TOUCHSCREEN_TPS6507X
 	  To compile this driver as a module, choose M here: the
 	  module will be called tps6507x_ts.
 
+source "drivers/input/touchscreen/generic_ts_rel/Kconfig"
+
 endif
