--- a/arch/arm/boot/dts/imx6dl.dtsi
+++ b/arch/arm/boot/dts/imx6dl.dtsi
@@ -169,9 +169,10 @@
 			i2c4: i2c@021f8000 {
 				#address-cells = <1>;
 				#size-cells = <0>;
-				compatible = "fsl,imx1-i2c";
+				compatible = "fsl,imx6q-i2c", "fsl,imx21-i2c";
 				reg = <0x021f8000 0x4000>;
 				interrupts = <0 35 0x04>;
+				clocks = <&clks 116>;
 				status = "disabled";
 			};
 		};
@@ -205,4 +206,13 @@
 			>;
 		};
 	};
+
+    i2c4 {
+        pinctrl_i2c4_1: i2c4grp-1 {
+            fsl,pins = <
+                MX6QDL_PAD_GPIO_7__I2C4_SCL 0x4001b8b1
+                MX6QDL_PAD_GPIO_8__I2C4_SDA 0x4001b8b1
+            >;
+        };
+    };
 };
