--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -1076,7 +1076,19 @@
 			fsl,pins = <
 				MX6QDL_PAD_EIM_D19__GPIO3_IO19 0x80000000
 			>;
-		};
+		     };
+
+		pinctrl_ecspi1_cs_2: ecspi1_cs_grp-2 {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_ROW1__GPIO4_IO09 0x80000000
+			>;
+		     };
+
+		pinctrl_ecspi1_cs_3: ecspi1_cs_grp-3 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_EB2__GPIO2_IO30  0x80000000
+			>;
+		     };
 
 		pinctrl_ecspi1_1: ecspi1grp-1 {
 			fsl,pins = <
@@ -1091,6 +1103,16 @@
 				MX6QDL_PAD_KEY_COL1__ECSPI1_MISO 0x100b1
 				MX6QDL_PAD_KEY_ROW0__ECSPI1_MOSI 0x100b1
 				MX6QDL_PAD_KEY_COL0__ECSPI1_SCLK 0x100b1
+			>;
+		};
+	};
+
+	ecspi2 {
+		pinctrl_ecspi2_1: ecspi2grp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_OE__ECSPI2_MISO 0x100b1
+				MX6QDL_PAD_EIM_CS1__ECSPI2_MOSI 0x100b1
+				MX6QDL_PAD_EIM_CS0__ECSPI2_SCLK 0x100b1
 			>;
 		};
 	};
@@ -1213,6 +1235,13 @@
 			fsl,pins = <
 				MX6QDL_PAD_GPIO_7__FLEXCAN1_TX   0x80000000
 				MX6QDL_PAD_KEY_ROW2__FLEXCAN1_RX 0x80000000
+			>;
+		};
+
+		pinctrl_flexcan1_3: flexcan1grp-3 {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_7__FLEXCAN1_TX   0x80000000
+				MX6QDL_PAD_GPIO_8__FLEXCAN1_RX   0x80000000
 			>;
 		};
 	};
@@ -1354,6 +1383,13 @@
 				MX6QDL_PAD_EIM_D18__I2C3_SDA 0x4001b8b1
 			>;
 		};
+
+		pinctrl_i2c3_5: i2c3grp-5 {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_5__I2C3_SCL	 0x4001b8b1
+				MX6QDL_PAD_GPIO_6__I2C3_SDA	 0x4001b8b1
+			>;
+		};
 	};
 
 	ipu1 {
@@ -1457,6 +1493,20 @@
 				MX6QDL_PAD_SD1_DAT3__PWM1_OUT 0x1b0b1
 			>;
 		};
+
+		pinctrl_pwm1_2: pwm1grp-2 {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_9__PWM1_OUT 0x1b0b1
+			>;
+		};
+	};
+
+	pwm2 {
+		pinctrl_pwm2_1: pwm2grp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_1__PWM2_OUT 0x1b0b1
+			>;
+		};
 	};
 
 	pwm3 {
@@ -1466,6 +1516,14 @@
 			>;
 		};
 	};
+
+	pwm4 {
+		pinctrl_pwm4_1: pwm4grp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_SD1_CMD__PWM4_OUT 0x1b0b1
+			>;
+		};
+    };
 
 	spdif {
 		pinctrl_spdif_1: spdifgrp-1 {
@@ -1480,6 +1538,15 @@
 				MX6QDL_PAD_GPIO_17__SPDIF_OUT 0x1b0b0
 			>;
 		};
+
+		pinctrl_spdif_3: spdifgrp-3 {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_16__SPDIF_IN    0x1b0b0
+				MX6QDL_PAD_ENET_RXD0__SPDIF_OUT 0x1b0b0
+				MX6QDL_PAD_GPIO_7__SPDIF_LOCK   0x1b0b0
+				MX6QDL_PAD_GPIO_8__SPDIF_SR_CLK 0x1b0b0
+			>;
+		};
 	};
 
 	uart1 {
@@ -1487,6 +1554,22 @@
 			fsl,pins = <
 				MX6QDL_PAD_CSI0_DAT10__UART1_TX_DATA 0x1b0b1
 				MX6QDL_PAD_CSI0_DAT11__UART1_RX_DATA 0x1b0b1
+			>;
+		};
+
+		pinctrl_uart1_2: uart1grp-2 {
+			fsl,pins = <
+				MX6QDL_PAD_CSI0_DAT10__UART1_TX_DATA 0x1b0b1
+				MX6QDL_PAD_CSI0_DAT11__UART1_RX_DATA 0x1b0b1
+				MX6QDL_PAD_EIM_D19__UART1_CTS_B      0x1b0b1
+				MX6QDL_PAD_EIM_D20__UART1_RTS_B      0x1b0b1
+			>;
+		};
+
+		pinctrl_uart1_3: uart1grp-3 {
+			fsl,pins = <
+				MX6QDL_PAD_SD3_DAT7__UART1_TX_DATA 0x1b0b1
+				MX6QDL_PAD_SD3_DAT6__UART1_RX_DATA 0x1b0b1
 			>;
 		};
 	};
@@ -1507,6 +1590,15 @@
 				MX6QDL_PAD_EIM_D29__UART2_DTE_RTS_B 0x1b0b1
 			>;
 		};
+
+		pinctrl_uart2_3: uart2grp-3 { /* DTE mode */
+			fsl,pins = <
+				MX6QDL_PAD_EIM_D26__UART2_TX_DATA   0x1b0b1
+				MX6QDL_PAD_EIM_D27__UART2_RX_DATA   0x1b0b1
+				MX6QDL_PAD_SD3_CMD__UART2_CTS_B     0x1b0b1
+				MX6QDL_PAD_SD3_CLK__UART2_RTS_B     0x1b0b1
+			>;
+		};
 	};
 
 	uart3 {
@@ -1518,6 +1610,24 @@
 				MX6QDL_PAD_EIM_EB3__UART3_RTS_B   0x1b0b1
 			>;
 		};
+
+		pinctrl_uart3_2: uart3grp-2 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_D25__UART3_RX_DATA 0x1b0b1
+				MX6QDL_PAD_EIM_D24__UART3_TX_DATA 0x1b0b1
+				MX6QDL_PAD_EIM_D23__UART3_CTS_B   0x1b0b1
+				MX6QDL_PAD_EIM_EB3__UART3_RTS_B   0x1b0b1
+			>;
+		};
+
+		pinctrl_uart3_3: uart3grp-3 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_D25__UART3_RX_DATA 0x1b0b1
+				MX6QDL_PAD_EIM_D24__UART3_TX_DATA 0x1b0b1
+				MX6QDL_PAD_EIM_D23__UART3_CTS_B   0x1b0b1
+				MX6QDL_PAD_SD3_RST__UART3_RTS_B   0x1b0b1
+			>;
+		};
 	};
 
 	uart4 {
@@ -1525,6 +1635,15 @@
 			fsl,pins = <
 				MX6QDL_PAD_KEY_COL0__UART4_TX_DATA 0x1b0b1
 				MX6QDL_PAD_KEY_ROW0__UART4_RX_DATA 0x1b0b1
+			>;
+		};
+	};
+
+	uart5 {
+		pinctrl_uart5_1: uart5grp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_COL1__UART5_TX_DATA 0x1b0b1
+				MX6QDL_PAD_KEY_ROW1__UART5_RX_DATA 0x1b0b1
 			>;
 		};
 	};
@@ -1756,5 +1875,50 @@
 				MX6QDL_PAD_EIM_DA0__EIM_AD00   0xb0b1
 			>;
 		};
+	};
+
+	kpp {
+		/* A 3 x 3 keypad */
+		pinctrl_kpp_1: kpp_grp_1 {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_ROW0__KEY_ROW0    0x1b010
+				MX6QDL_PAD_KEY_ROW1__KEY_ROW1    0x1b010
+				MX6QDL_PAD_KEY_ROW2__KEY_ROW2    0x1b010
+				MX6QDL_PAD_KEY_COL0__KEY_COL0    0x110b0
+				MX6QDL_PAD_KEY_COL1__KEY_COL1    0x110b0
+				MX6QDL_PAD_KEY_COL2__KEY_COL2    0x110b0
+			>;
+		};
+
+		/* A 4 x 4 keypad */
+		pinctrl_kpp_2: kpp_grp_2 {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_ROW0__KEY_ROW0    0x1b010
+				MX6QDL_PAD_KEY_ROW1__KEY_ROW1    0x1b010
+				MX6QDL_PAD_KEY_ROW2__KEY_ROW2    0x1b010
+				MX6QDL_PAD_KEY_ROW3__KEY_ROW3    0x1b010
+				MX6QDL_PAD_KEY_COL0__KEY_COL0    0x110b0
+				MX6QDL_PAD_KEY_COL1__KEY_COL1    0x110b0
+				MX6QDL_PAD_KEY_COL2__KEY_COL2    0x110b0
+				MX6QDL_PAD_KEY_COL3__KEY_COL3    0x110b0
+			>;
+		};
+
+		/* A 5 x 5 keypad */
+		pinctrl_kpp_3: kpp_grp_3 {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_ROW0__KEY_ROW0    0x1b010
+				MX6QDL_PAD_KEY_ROW1__KEY_ROW1    0x1b010
+				MX6QDL_PAD_KEY_ROW2__KEY_ROW2    0x1b010
+				MX6QDL_PAD_KEY_ROW3__KEY_ROW3    0x1b010
+				MX6QDL_PAD_KEY_ROW4__KEY_ROW4    0x1b010
+				MX6QDL_PAD_KEY_COL0__KEY_COL0    0x110b0
+				MX6QDL_PAD_KEY_COL1__KEY_COL1    0x110b0
+				MX6QDL_PAD_KEY_COL2__KEY_COL2    0x110b0
+				MX6QDL_PAD_KEY_COL3__KEY_COL3    0x110b0
+				MX6QDL_PAD_KEY_COL4__KEY_COL4    0x110b0
+			>;
+		};
+
 	};
 };
