--- a/drivers/media/platform/mxc/capture/Kconfig
+++ b/drivers/media/platform/mxc/capture/Kconfig
@@ -36,6 +36,13 @@ config MXC_TVIN_ADV7180
 	---help---
 	  If you plan to use the adv7180 video decoder with your MXC system, say Y here.
 
+config MXC_CAMERA_OV2656
+        tristate "OmniVision ov2656 camera support"
+        depends on !VIDEO_MXC_EMMA_CAMERA
+        select MXC_CAMERA_SENSOR_CLK
+        ---help---
+          If you plan to use the ov2656 Camera with your MXC system, say Y here.
+
 choice
 	prompt "Select Overlay Rounting"
 	default MXC_IPU_DEVICE_QUEUE_SDC
